Closet name and open status

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,11 +8,12 @@
 <h1 style="color: red;"> My Closet </h1>
 <form id="saveForm">
     Name: <input type="text" id="name" required><br/>
+    <br/>
       <button id="saveBtn"> Save</button>
 </form>
 <br/>
 <br/>
-<p id="wardrobe">
+<p id="wardrobes">
     No wardrobe
 </p>
 
