--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,19 @@
 <body>
 <h1 style="color: red;"> My Closet </h1>
 <form id="saveForm">
-    Name: <input type="text" id="name" required><br/>
-    <br/>
-      <button id="saveBtn"> Save</button>
+    Name: <input type="text" id="name" required>
+      <button id="saveBtn"> create wardrobe</button> <br/>
+    <button id="open"> open warderobe</button>
+    <button id="close"> close wardrobe</button>
+    <button id="in">step in</button>
+    <button id="out">step out</button> <br/>
+    <button id="kick">kick it</button>
+    <button id="delete">delete wardrobe</button>
+
 </form>
 <br/>
 <br/>
-<p id="wardrobes">
+<p id="wardrobe">
     No wardrobe
 </p>
 
