--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,12 @@
     <br/>
       <button id="saveBtn"> Save</button>
 </form>
+<button id="open"> open warderobe</button>
+<button id="close"> close wardrobe</button>
+<button id="in">step in</button>
+<button id="out">step out</button> <br/>
+<button id="kick">kick it</button>
+<button id="delete">delete wardrobe</button>
 <br/>
 <br/>
 <p id="wardrobes">
