--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <title>Closet Generator</title>
 </head>
 <body>
-<h1 style="color: red;"> My Closet </h1>
+<h1 style="color: red;"> Closet </h1>
 <form id="saveForm">
     Name: <input type="text" id="name" required><br/>
     <br/>
